CHANGES.txt - 2008-01-05
------------------------

CHANGES IN CUPS V1.4b1

	- cupsGetDests*() and cupsSetDests*() now track the last
	  used printer preference on Mac OS X.
	- Added a new streaming request API (STR #2261)
	- Added a new cupsGetNamedDest() function to the CUPS
	  library for faster printing with lp and lpr (STR #2638)
	- The scheduler now sets the PAM RHOST value on systems
	  that support it (STR #2637)
	- The scheduler now sandboxes child processes when
	  possible.
	- The Cancel-Job operation now supports a purge-job
	  attriibute to purge a specified job.
	- ppdEmit* and ppdCollect* now use the NonUIOrderDependency
	  attributes for custom option selections.
	- The web interface now enables/disables the printer
	  sharing (formerly publishing) controls based on the
	  server-is-sharing-printers state (STR #2233)
	- The scheduler now tracks printer sharing via the
	  server-is-sharing-printers attribute, and manages LPD
	  and SMB sharing as well (STR #2233)
	- The web interface now allows you to go back to the make/
	  manufacturer page if there is no matching printer driver
	  on the model page (STR #2436)
	- The printer list now shows the default media, banner, and
	  duplex options as well as the color and duplex capabilities
	  of printers (STR #1175)
	- The web interface look-n-feel has been updated (STR #2492)
	- The scheduler now supports a CUPS-Get-Document operation
	  that returns the specified print job document (STR #118)
	- The cupsfilter utility now supports a "-J jobid" option
	  to filter the document from the specified job.
	- The scheduler (cupsd) now supports a new option (-t) to
	  do a syntax check of the cupsd.conf file (STR #2003)
	- Added new cupsGetPPD3() API to allow applications to
	  cache PPDs safely (STR #1473)
	- Added generic PostScript and PCL printer driver PPDs.
